Fixed Swiper Glitch on Mobile

--- a/styles/general.css
+++ b/styles/general.css
@@ -15,6 +15,12 @@ body {
 	background-color: #121212 !important;
 }
 
+@media (max-width: 767px) {
+	.swiper-slide {
+		height: 350px;
+	}
+}
+
 .parallax {
 	/* Set a specific height */
 	min-height: 500px;
